UF-8925: Add municipalityId to resources