@@ -3,6 +3,7 @@ package se.sundsvall.partyassets.api;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.groups.Tuple.tuple;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
@@ -41,6 +42,10 @@ class AssetResourceTest {
 	private static final Map<Status, List<String>> VALID_STATUS_REASONS_FOR_STATUSES = Map.of(
 		Status.BLOCKED, List.of("IRREGULARITY", "LOST"));
 
+	private static final String MUNICIPALITY_ID = "2281";
+
+	private static final String PATH = MUNICIPALITY_ID + "/assets";
+
 	@MockBean
 	private AssetService assetServiceMock;
 
@@ -55,11 +60,11 @@ class AssetResourceTest {
 		// Arrange
 		final var assets = List.of(TestFactory.getAsset());
 
-		when(assetServiceMock.getAssets(any(AssetSearchRequest.class))).thenReturn(assets);
+		when(assetServiceMock.getAssets(eq(MUNICIPALITY_ID),any(AssetSearchRequest.class))).thenReturn(assets);
 
 		// Act
 		final var result = webTestClient.get()
-			.uri(uriBuilder -> uriBuilder.path("/assets")
+			.uri(uriBuilder -> uriBuilder.path(PATH)
 				.queryParam("partyId", UUID.randomUUID())
 				.queryParam("assetId", "assetId")
 				.queryParam("status", Status.ACTIVE)
@@ -80,16 +85,16 @@ class AssetResourceTest {
 
 		// Assert
 		assertThat(result).usingRecursiveComparison().isEqualTo(assets);
-		verify(assetServiceMock).getAssets(any(AssetSearchRequest.class));
+		verify(assetServiceMock).getAssets(eq(MUNICIPALITY_ID),any(AssetSearchRequest.class));
 		verifyNoMoreInteractions(assetServiceMock);
 	}
 
 	@ParameterizedTest
 	@ValueSource(strings = { "imNotARealUUID", "1", "1234-1234-1234-1234" })
-	void getAssets_faultyPartyId(String uuid) {
+	void getAssets_faultyPartyId(final String uuid) {
 		// Act
 		final var test = webTestClient.get()
-			.uri(uriBuilder -> uriBuilder.path("/assets")
+			.uri(uriBuilder -> uriBuilder.path(PATH)
 				.queryParam("partyId", uuid)
 				.build())
 			.exchange()
@@ -103,8 +108,8 @@ class AssetResourceTest {
 		assertThat(test).isNotNull();
 		assertThat(test.getStatus()).isNotNull();
 		assertThat(test.getStatus().getStatusCode()).isEqualTo(400);
-		assertThat(test.getViolations().get(0).getMessage()).isEqualTo("not a valid UUID");
-		assertThat(test.getViolations().get(0).getField()).isEqualTo("partyId");
+		assertThat(test.getViolations().getFirst().getMessage()).isEqualTo("not a valid UUID");
+		assertThat(test.getViolations().getFirst().getField()).isEqualTo("partyId");
 		assertThat(test.getTitle()).isEqualTo("Constraint Violation");
 		assertThat(test.getType()).isEqualTo(ConstraintViolationProblem.TYPE);
 		verifyNoInteractions(assetServiceMock);
@@ -116,19 +121,19 @@ class AssetResourceTest {
 		final var uuid = UUID.randomUUID().toString();
 		final var assetRequest = TestFactory.getAssetCreateRequest(UUID.randomUUID().toString()).withStatusReason(null);
 
-		when(assetServiceMock.createAsset(assetRequest)).thenReturn(uuid.toString());
+		when(assetServiceMock.createAsset(MUNICIPALITY_ID,assetRequest)).thenReturn(uuid);
 
 		// Act
 		webTestClient.post()
-			.uri("/assets")
+			.uri(PATH)
 			.bodyValue(assetRequest)
 			.exchange()
 			.expectStatus()
 			.isCreated()
-			.expectHeader().location("/assets/" + uuid);
+			.expectHeader().location("/"+MUNICIPALITY_ID+"/assets/" + uuid);
 
 		// Assert
-		verify(assetServiceMock).createAsset(assetRequest);
+		verify(assetServiceMock).createAsset(MUNICIPALITY_ID,assetRequest);
 		verifyNoMoreInteractions(assetServiceMock);
 	}
 
@@ -136,7 +141,7 @@ class AssetResourceTest {
 	void createAsset_emptyRequest() {
 		// Act
 		final var response = webTestClient.post()
-			.uri("/assets")
+			.uri(PATH)
 			.bodyValue(AssetCreateRequest.create())
 			.exchange()
 			.expectStatus()
@@ -170,7 +175,7 @@ class AssetResourceTest {
 
 		// Act
 		final var response = webTestClient.post()
-			.uri("/assets")
+			.uri(PATH)
 			.bodyValue(assetRequest)
 			.exchange()
 			.expectStatus()
@@ -183,8 +188,8 @@ class AssetResourceTest {
 		assertThat(response).isNotNull();
 		assertThat(response.getStatus()).isNotNull();
 		assertThat(response.getStatus().getStatusCode()).isEqualTo(400);
-		assertThat(response.getViolations().get(0).getMessage()).isEqualTo("'statusReason' is not valid reason for status ACTIVE. Valid reasons are [].");
-		assertThat(response.getViolations().get(0).getField()).isEqualTo("assetCreateRequest");
+		assertThat(response.getViolations().getFirst().getMessage()).isEqualTo("'statusReason' is not valid reason for status ACTIVE. Valid reasons are [].");
+		assertThat(response.getViolations().getFirst().getField()).isEqualTo("assetCreateRequest");
 		assertThat(response.getTitle()).isEqualTo("Constraint Violation");
 		assertThat(response.getType()).isEqualTo(ConstraintViolationProblem.TYPE);
 		verifyNoInteractions(assetServiceMock);
@@ -196,18 +201,18 @@ class AssetResourceTest {
 		final var id = UUID.randomUUID().toString();
 		final var assetRequest = TestFactory.getAssetUpdateRequest().withStatusReason("LOST");
 
-		when(statusServiceMock.getReasonsForAllStatuses()).thenReturn(VALID_STATUS_REASONS_FOR_STATUSES);
+		when(statusServiceMock.getReasonsForAllStatuses(MUNICIPALITY_ID)).thenReturn(VALID_STATUS_REASONS_FOR_STATUSES);
 
 		// Act
 		webTestClient.put()
-			.uri("/assets/{id}", id)
+			.uri(PATH+"/{id}", id)
 			.bodyValue(assetRequest)
 			.exchange()
 			.expectStatus()
 			.isNoContent();
 
 		// Assert
-		verify(assetServiceMock).updateAsset(id, assetRequest);
+		verify(assetServiceMock).updateAsset(MUNICIPALITY_ID,id, assetRequest);
 		verifyNoMoreInteractions(assetServiceMock);
 	}
 
@@ -217,11 +222,11 @@ class AssetResourceTest {
 		final var id = UUID.randomUUID().toString();
 		final var assetRequest = TestFactory.getAssetUpdateRequest();
 
-		when(statusServiceMock.getReasonsForAllStatuses()).thenReturn(VALID_STATUS_REASONS_FOR_STATUSES);
+		when(statusServiceMock.getReasonsForAllStatuses(MUNICIPALITY_ID)).thenReturn(VALID_STATUS_REASONS_FOR_STATUSES);
 
 		// Act
 		final var response = webTestClient.put()
-			.uri("/assets/{id}", id)
+			.uri(PATH+"/{id}", id)
 			.bodyValue(assetRequest)
 			.exchange()
 			.expectStatus()
@@ -234,8 +239,8 @@ class AssetResourceTest {
 		assertThat(response).isNotNull();
 		assertThat(response.getStatus()).isNotNull();
 		assertThat(response.getStatus().getStatusCode()).isEqualTo(400);
-		assertThat(response.getViolations().get(0).getMessage()).isEqualTo("'statusReasonUpdated' is not valid reason for status BLOCKED. Valid reasons are [IRREGULARITY, LOST].");
-		assertThat(response.getViolations().get(0).getField()).isEqualTo("assetUpdateRequest");
+		assertThat(response.getViolations().getFirst().getMessage()).isEqualTo("'statusReasonUpdated' is not valid reason for status BLOCKED. Valid reasons are [IRREGULARITY, LOST].");
+		assertThat(response.getViolations().getFirst().getField()).isEqualTo("assetUpdateRequest");
 		assertThat(response.getTitle()).isEqualTo("Constraint Violation");
 		assertThat(response.getType()).isEqualTo(ConstraintViolationProblem.TYPE);
 		verifyNoInteractions(assetServiceMock);
@@ -247,11 +252,11 @@ class AssetResourceTest {
 		final var id = "imNotARealUUID";
 		final var assetRequest = TestFactory.getAssetUpdateRequest().withStatusReason("IRREGULARITY");
 
-		when(statusServiceMock.getReasonsForAllStatuses()).thenReturn(VALID_STATUS_REASONS_FOR_STATUSES);
+		when(statusServiceMock.getReasonsForAllStatuses(MUNICIPALITY_ID)).thenReturn(VALID_STATUS_REASONS_FOR_STATUSES);
 
 		// Act
 		final var response = webTestClient.put()
-			.uri("/assets/{id}", id)
+			.uri(PATH+"/{id}", id)
 			.bodyValue(assetRequest)
 			.exchange()
 			.expectStatus()
@@ -264,8 +269,8 @@ class AssetResourceTest {
 		assertThat(response).isNotNull();
 		assertThat(response.getStatus()).isNotNull();
 		assertThat(response.getStatus().getStatusCode()).isEqualTo(400);
-		assertThat(response.getViolations().get(0).getMessage()).isEqualTo("not a valid UUID");
-		assertThat(response.getViolations().get(0).getField()).isEqualTo("updateAsset.id");
+		assertThat(response.getViolations().getFirst().getMessage()).isEqualTo("not a valid UUID");
+		assertThat(response.getViolations().getFirst().getField()).isEqualTo("updateAsset.id");
 		assertThat(response.getTitle()).isEqualTo("Constraint Violation");
 		assertThat(response.getType()).isEqualTo(ConstraintViolationProblem.TYPE);
 		verifyNoInteractions(assetServiceMock);
@@ -278,13 +283,13 @@ class AssetResourceTest {
 
 		// Act
 		webTestClient.delete()
-			.uri("/assets/{id}", uuid)
+			.uri(PATH+"/{id}", uuid)
 			.exchange()
 			.expectStatus()
 			.isNoContent();
 
 		// Assert
-		verify(assetServiceMock).deleteAsset(uuid);
+		verify(assetServiceMock).deleteAsset(MUNICIPALITY_ID,uuid);
 		verifyNoMoreInteractions(assetServiceMock);
 	}
 
@@ -295,7 +300,7 @@ class AssetResourceTest {
 
 		// Act
 		final var response = webTestClient.delete()
-			.uri("/assets/{id}", uuid)
+			.uri(PATH+"/{id}", uuid)
 			.exchange()
 			.expectStatus()
 			.is4xxClientError()
@@ -307,8 +312,8 @@ class AssetResourceTest {
 		assertThat(response).isNotNull();
 		assertThat(response.getStatus()).isNotNull();
 		assertThat(response.getStatus().getStatusCode()).isEqualTo(400);
-		assertThat(response.getViolations().get(0).getMessage()).isEqualTo("not a valid UUID");
-		assertThat(response.getViolations().get(0).getField()).isEqualTo("deleteAsset.id");
+		assertThat(response.getViolations().getFirst().getMessage()).isEqualTo("not a valid UUID");
+		assertThat(response.getViolations().getFirst().getField()).isEqualTo("deleteAsset.id");
 		assertThat(response.getTitle()).isEqualTo("Constraint Violation");
 		assertThat(response.getType()).isEqualTo(ConstraintViolationProblem.TYPE);
 		verifyNoInteractions(assetServiceMock);
